# pdf_separation

./: .gitignore  convert.py  create_dataset.py  pyproject.toml  slurm.sh  train_model.py
dataset/: dataset_1.npz
model/: model.py
