[project]
name = "pdf-separation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
